@@ -3,25 +3,63 @@ package com.example.lesson_4.controller;
 import com.example.lesson_4.models.Network;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
-import javafx.scene.control.Button;
-import javafx.scene.control.ListView;
-import javafx.scene.control.TextArea;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.scene.input.MouseEvent;
 
+import java.text.DateFormat;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Date;
+
 public class ChatController {
+
+
+    @FXML
+    private ListView<String> usersList;
+
+    @FXML
+    private Label usernameTitle;
+
+    @FXML
+    private TextArea chatHistory;
 
     @FXML
     private TextField inputField;
 
     @FXML
     private Button sendButton;
+    private String selectedRecipient;
+
+
 
     @FXML
-    private TextArea chatHistory;
+    public void initialize() {
+        usersList.setItems(FXCollections.observableArrayList("Тимофей", "Дмитрий", "Диана", "Арман"));
+        sendButton.setOnAction(event -> sendMessage());
+        inputField.setOnAction(event -> sendMessage());
 
-    @FXML
-    private ListView<String> userList;
+        usersList.setCellFactory(lv -> {
+            MultipleSelectionModel<String> selectionModel = usersList.getSelectionModel();
+            ListCell<String> cell = new ListCell<>();
+            cell.textProperty().bind(cell.itemProperty());
+            cell.addEventFilter(MouseEvent.MOUSE_PRESSED, event -> {
+                usersList.requestFocus();
+                if (!cell.isEmpty()) {
+                    int index = cell.getIndex();
+                    if (selectionModel.getSelectedIndices().contains(index)) {
+                        selectionModel.clearSelection(index);
+                        selectedRecipient = null;
+                    } else {
+                        selectionModel.select(index);
+                        selectedRecipient = cell.getItem();
+                    }
+                    event.consume();
+                }
+            });
+            return cell;
+        });
+
+    }
 
     private Network network;
 
@@ -29,33 +67,57 @@ public class ChatController {
         this.network = network;
     }
 
-    @FXML
-    void inputUsers(MouseEvent event) {
-
-    }
-
-    @FXML
-    void sendingMessage() { // обрабатываем сообщение введенное в строчке формочки
+    private void sendMessage() {
         String message = inputField.getText().trim();
         inputField.clear();
-        if (message.isBlank()) {
+
+
+        if (message.trim().isEmpty()) {
             return;
         }
-        network.sendMessage(message);
-        // appendMessage(message);
+
+        if (selectedRecipient != null) {
+            network.sendPrivateMessage(selectedRecipient, message);
+        } else {
+            network.sendMessage(message);
+        }
+
+        appendMessage("Я: " + message);
     }
 
     public void appendMessage(String message) {
+        String timeStamp = DateFormat.getInstance().format(new Date());
+
+        chatHistory.appendText(timeStamp);
+        chatHistory.appendText(System.lineSeparator());
         chatHistory.appendText(message);
+        chatHistory.appendText(System.lineSeparator());
         chatHistory.appendText(System.lineSeparator());
     }
 
-    @FXML
-    public void initialise() {
-        userList.setItems(FXCollections.observableArrayList("Алексей", "Михаил", "Ольга"));
-        sendButton.setOnAction(event -> sendingMessage());
-        inputField.setOnAction(event -> sendingMessage());
+    public void appendServerMessage(String serverMessage) {
+        chatHistory.appendText("ВНИМАНИЕ: " + serverMessage);
+        chatHistory.appendText(System.lineSeparator());
+        chatHistory.appendText(System.lineSeparator());
     }
+
+    public void setUsernameTitle(String username) {
+        this.usernameTitle.setText(username);
+    }
+
+    public void updateUsersList(String[] users) {
+
+        Arrays.sort(users);
+
+        for (int i = 0; i < users.length; i++) {
+            if (users[i].equals(network.getUsername())) {
+                users[i] = ">>> " + users[i];
+            }
+        }
+        usersList.getItems().clear();
+        Collections.addAll(usersList.getItems(), users);
+    }
+
 }
 
 
